--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi Form</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Style de base */
         body {
@@ -204,8 +204,8 @@
 
         /* Style pour la question du légume */
         .question.legume-question h2 {
-            font-family: 'Dancing Script', cursive;
-            font-size: 8vmin;
+            font-family: 'Pacifico', cursive;
+            font-size: 6vmin;
             margin-bottom: 3vmin;
             color: #ff6f61;
             text-shadow: 2px 2px 0 #ffa580;
@@ -243,7 +243,7 @@
             <div class="error-message">Veuillez répondre à cette question.</div>
         </div>
         <div class="question legume-question">
-            <h2>A toi de créer ton sushi !</h2>
+            <h2>A toi de me dire ce que tu veux dans tes makis !</h2>
             <p>Le prix de 10 sushis est de 6.5€</p>
             <label>Quel légume ?</label>
             <div class="btn-group">
