--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sushi Form</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Style de base */
         body {
@@ -14,7 +13,7 @@
             height: 100vh;
             overflow: hidden;
             position: relative;
-            background: url('fondsushis.png') center center no-repeat;
+            background: url('fondsushis.png') center center no-repeat; /* Chemin relatif vers l'image */
             background-size: cover;
             display: flex;
             align-items: center;
@@ -40,17 +39,13 @@
         }
 
         .home-page h1 {
-            font-family: 'Pacifico', cursive;
-            font-size: 10vmin;
+            font-size: 8vmin;
             margin-bottom: 5%;
-            animation: slideIn 1s ease-out;
         }
 
         .home-page p {
-            font-family: 'Quicksand', sans-serif;
-            font-size: 5vmin;
+            font-size: 4vmin;
             margin-bottom: 10%;
-            animation: slideIn 1.5s ease-out;
         }
 
         .home-page .order-btn {
@@ -60,19 +55,14 @@
             color: white;
             border: 2px solid black;
             cursor: pointer;
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            transition: 0.2s all ease-in-out;
             box-shadow: 3px 3px 1px black;
             border-radius: 10px;
         }
 
         .home-page .order-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        @keyframes slideIn {
-            from { transform: translateY(-50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
+            background: black;
+            color: white;
         }
 
         /* Style du formulaire */
@@ -84,9 +74,9 @@
             box-shadow: 15px 15px 1px #ffa580, 15px 15px 1px 2px black;
             text-align: center;
             width: 80vmin;
-            height: 90vmin;
-            margin-top: 5vmin;
-            margin-bottom: 5vmin;
+            height: 90vmin; /* Hauteur augmentée */
+            margin-top: 5vmin; /* Marge en haut */
+            margin-bottom: 5vmin; /* Marge en bas */
             flex-direction: column;
             justify-content: center;
             position: relative;
@@ -202,20 +192,54 @@
             display: none;
         }
 
-        /* Style pour la question du légume */
-        .question.legume-question h2 {
-            font-family: 'Pacifico', cursive;
-            font-size: 6vmin;
-            margin-bottom: 3vmin;
-            color: #ff6f61;
-            text-shadow: 2px 2px 0 #ffa580;
+        /* Adapter les boutons de la sauce soja pour les petits écrans */
+        @media (max-width: 600px) {
+            .select-btn {
+                font-size: 3vmin; /* Taille de police réduite */
+                padding: 2vmin 3vmin; /* Padding réduit */
+                min-width: 80px; /* Largeur minimale réduite */
+            }
+
+            .btn-group {
+                flex-wrap: wrap; /* Permettre aux boutons de passer à la ligne */
+                gap: 10px; /* Espacement entre les boutons */
+            }
         }
 
-        .question.legume-question p {
-            font-family: 'Quicksand', sans-serif;
-            font-size: 4vmin;
-            margin-bottom: 5vmin;
-            color: black;
+        /* Adapter la page récapitulative pour tous les écrans */
+        .recap-page {
+            padding: 2vmin; /* Réduire le padding */
+            font-size: 3vmin; /* Taille de police de base */
+        }
+
+        .recap-page h2 {
+            font-size: 4vmin; /* Taille de police réduite */
+            margin-bottom: 2vmin; /* Espacement réduit */
+        }
+
+        .recap-page h3 {
+            font-size: 3.5vmin; /* Taille de police réduite */
+            margin-bottom: 1.5vmin; /* Espacement réduit */
+        }
+
+        .recap-page p {
+            font-size: 3vmin; /* Taille de police réduite */
+            margin: 1.5vmin 0; /* Espacement réduit */
+        }
+
+        .recap-page .select-btn {
+            font-size: 3vmin; /* Taille de police réduite */
+            padding: 1.5vmin 3vmin; /* Padding réduit */
+            margin-top: 2vmin; /* Espacement réduit */
+        }
+
+        #recap-content {
+            margin: 2vmin 0; /* Espacement réduit */
+        }
+
+        #recap-price h3 {
+            font-size: 3.5vmin; /* Taille de police réduite */
+            margin-top: 2vmin; /* Espacement réduit */
         }
     </style>
 </head>
@@ -242,9 +266,7 @@
             <input type="text" name="entry.1985104958" placeholder="b43" required>
             <div class="error-message">Veuillez répondre à cette question.</div>
         </div>
-        <div class="question legume-question">
-            <h2>A toi de me dire ce que tu veux dans tes makis !</h2>
-            <p>Le prix de 10 sushis est de 6.5€</p>
+        <div class="question">
             <label>Quel légume ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1292076072', 'avocats')">Avocat</button>
