--- a/index.html
+++ b/index.html
@@ -254,22 +254,26 @@
 
 
         /* Style pour le titre de la question */
+/* Style pour le titre de la question */
 .question-title {
-    font-size: 7vmin; /* Taille de police plus grande */
+    font-size: 8vmin; /* Taille de police plus grande */
     text-align: center;
     margin-top: 0;
     margin-bottom: 3%; /* Réduire la marge pour monter le titre */
-    color: #333;
-    font-family: 'Fjalla One', sans-serif;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Ombre portée plus prononcée */
+    color: #333; /* Couleur sobre */
+    font-family: 'Arial', sans-serif; /* Police plus sobre */
+    font-weight: bold; /* Texte en gras */
+    text-transform: uppercase; /* Texte en majuscules */
+    letter-spacing: 2px; /* Espacement des lettres */
     position: relative;
     top: -20px; /* Monter le titre encore plus haut */
-    background: linear-gradient(45deg, #ff6f61, #ffa580); /* Dégradé de couleur */
-    -webkit-background-clip: text; /* Appliquer le dégradé au texte */
-    background-clip: text;
-    color: transparent; /* Rendre le texte transparent pour voir le dégradé */
-    transform: rotate(-2deg); /* Incurvation légère */
-    animation: float 3s ease-in-out infinite; /* Animation subtile */
+    transform: rotate(-1deg); /* Légère rotation vers le bas */
+    display: inline-block; /* Permet d'appliquer la transformation */
+    padding: 10px 20px; /* Espacement interne */
+    background: #f8f4e5; /* Fond blanc pour s'intégrer au cadre */
+    border: 2px solid #333; /* Bordure sobre */
+    border-radius: 15px; /* Coins arrondis */
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1); /* Ombre légère */
 }
 
 /* Animation pour le titre */
@@ -295,6 +299,25 @@
 .price-info strong {
     color: #ff6f61; /* Couleur accentuée pour le prix */
 }
+
+/* Conteneur pour les légumes */
+.vegetable-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px; /* Espace entre les images et le texte */
+    margin-bottom: 5%;
+}
+
+/* Style des images */
+
+.vegetable-image {
+    width: 80px; /* Taille des images */
+    height: auto; /* Conserver les proportions */
+    border-radius: 10px; /* Coins arrondis */
+    opacity: 0.8; /* Légère transparence pour un effet discret */
+}
+
 
     </style>
 </head>
@@ -325,7 +348,11 @@
         <div class="question">
             <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <p class="price-info">Prix pour 8 makis : <strong>6,5 €</strong></p>
-            <label>Quel légume ?</label>
+            <div class="vegetable-container">
+                <img src="avocat.png" alt="Avocat" class="vegetable-image">
+                <label>Quel légume ?</label>
+                <img src="concombre.png" alt="Concombre" class="vegetable-image">
+            </div>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1292076072', 'avocats')">Avocat</button>
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1292076072', 'concombres')">Concombre</button>
