--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
             }
         }
 
-        /* Conteneur pour les légumes */
-        .vegetable-container {
+        /* Conteneur pour les légumes et le poisson */
+        .ingredient-container {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -292,7 +292,7 @@
         }
 
         /* Style des images */
-        .vegetable-image {
+        .ingredient-image {
             width: 80px; /* Taille des images */
             height: auto; /* Conserver les proportions */
             border-radius: 10px; /* Coins arrondis */
@@ -300,11 +300,11 @@
         }
 
         /* Rotation des images */
-        .vegetable-image:first-child {
+        .ingredient-image:first-child {
             transform: rotate(-5deg); /* Légère rotation vers la gauche */
         }
 
-        .vegetable-image:last-child {
+        .ingredient-image:last-child {
             transform: rotate(5deg); /* Légère rotation vers la droite */
         }
     </style>
@@ -333,13 +333,14 @@
             <div class="error-message">Veuillez répondre à cette question.</div>
         </div>
         
+        <!-- Question des légumes -->
         <div class="question">
             <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <p class="price-info">Prix pour 8 makis : <strong>6,5 €</strong></p>
-            <div class="vegetable-container">
-                <img src="avocat.png" alt="Avocat" class="vegetable-image">
+            <div class="ingredient-container">
+                <img src="avocat.png" alt="Avocat" class="ingredient-image">
                 <label>Quel légume ?</label>
-                <img src="concombre.png" alt="Concombre" class="vegetable-image">
+                <img src="concombre.png" alt="Concombre" class="ingredient-image">
             </div>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1292076072', 'avocats')">Avocat</button>
@@ -348,8 +349,14 @@
             <input type="hidden" name="entry.1292076072" id="entry.1292076072" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
+        <!-- Question du poisson -->
         <div class="question">
-            <label>Quel poisson ?</label>
+            <div class="ingredient-container">
+                <img src="saumon.png" alt="Saumon" class="ingredient-image">
+                <label>Quel poisson ?</label>
+                <img src="crevette.png" alt="Crevette" class="ingredient-image">
+            </div>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1726767774', 'Saumon')">Saumon</button>
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1726767774', 'Crevettes')">Crevette</button>
@@ -357,6 +364,8 @@
             <input type="hidden" name="entry.1726767774" id="entry.1726767774" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
+        <!-- Question du fromage frais -->
         <div class="question">
             <label>Fromage frais ?</label>
             <div class="btn-group">
@@ -366,6 +375,8 @@
             <input type="hidden" name="entry.887168393" id="entry.887168393" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
+        <!-- Question de la sauce soja -->
         <div class="question">
             <label>Soja ?</label>
             <div class="btn-group">
@@ -376,6 +387,8 @@
             <input type="hidden" name="entry.41252950" id="entry.41252950" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
+        <!-- Question de la livraison -->
         <div class="question">
             <label>Livré ?</label>
             <div class="btn-group">
@@ -385,6 +398,8 @@
             <input type="hidden" name="entry.554098723" id="entry.554098723" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
+        <!-- Question de la deuxième boîte -->
         <div class="question">
             <label>Une deuxième boîte ?</label>
             <div class="btn-group">
@@ -394,6 +409,7 @@
             <input type="hidden" name="entry.557485338" id="entry.557485338" required>
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
         <!-- Questions pour la deuxième boîte (masquées par défaut) -->
         <div class="question second-box">
             <label>Quel légume (2ème boîte) ?</label>
@@ -432,6 +448,7 @@
             <input type="hidden" name="entry.1450345325" id="entry.1450345325">
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
+
         <!-- Page de récapitulatif (masquée par défaut) -->
         <div class="question recap-page">
             <h2>Récapitulatif de votre commande</h2>
@@ -446,6 +463,8 @@
             </div>
             <div class="error-message">Veuillez confirmer votre commande.</div>
         </div>
+
+        <!-- Boutons de navigation -->
         <div class="nav-container">
             <button type="button" class="nav-btn next-btn" onclick="nextQuestion()">Suivant</button>
             <button type="submit" class="nav-btn submit-btn">Envoyer</button>
@@ -495,9 +514,9 @@
                 nextBtn.style.display = "none";
                 submitBtn.style.display = "block";
             } else {
-                // Masquer le bouton "Suivant" sur la question des légumes
+                // Masquer le bouton "Suivant" sur les questions d'ingrédients
                 const currentQuestion = document.querySelector(".question.active");
-                if (currentQuestion && currentQuestion.querySelector(".vegetable-container")) {
+                if (currentQuestion && (currentQuestion.querySelector(".ingredient-container") || currentQuestion.querySelector(".btn-group"))) {
                     nextBtn.style.display = "none";
                 } else {
                     nextBtn.style.display = "block";
