--- a/index.html
+++ b/index.html
@@ -323,11 +323,13 @@
     <form class="contact-us" action="https://docs.google.com/forms/d/e/1FAIpQLSec7_Wp_tyjnlGvlaTr4Ri172SPFX117Etf8mK6v7iTr1vp0Q/formResponse" method="POST">
         <!-- Questions existantes -->
         <div class="question active">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label for="entry.524815907">Comment tu t'appelles ?</label>
             <input type="text" name="entry.524815907" placeholder="Jean Paul" required>
             <div class="error-message">Veuillez répondre à cette question.</div>
         </div>
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label for="entry.1985104958">Tu habites dans quelle colloc ?</label>
             <input type="text" name="entry.1985104958" placeholder="b43" required>
             <div class="error-message">Veuillez répondre à cette question.</div>
@@ -352,6 +354,7 @@
 
         <!-- Question du poisson -->
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <div class="ingredient-container">
                 <img src="saumon.png" alt="Saumon" class="ingredient-image">
                 <label>Quel poisson ?</label>
@@ -367,6 +370,7 @@
 
         <!-- Question du fromage frais -->
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Fromage frais ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.887168393', 'Oui')">Oui</button>
@@ -378,6 +382,7 @@
 
         <!-- Question de la sauce soja -->
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Soja ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.41252950', 'Sucrée')">Sucrée</button>
@@ -390,6 +395,7 @@
 
         <!-- Question de la livraison -->
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Livré ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.554098723', 'Oui')">Oui</button>
@@ -401,6 +407,7 @@
 
         <!-- Question de la deuxième boîte -->
         <div class="question">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Une deuxième boîte ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectSecondBox(this, 'Oui')">Oui</button>
@@ -412,6 +419,7 @@
 
         <!-- Questions pour la deuxième boîte (masquées par défaut) -->
         <div class="question second-box">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Quel légume (2ème boîte) ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.2021454936', 'avocats')">Avocat</button>
@@ -421,6 +429,7 @@
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
         <div class="question second-box">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Quel poisson (2ème boîte) ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.819843500', 'Saumon')">Saumon</button>
@@ -430,6 +439,7 @@
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
         <div class="question second-box">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Fromage frais (2ème boîte) ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.516077606', 'Oui')">Oui</button>
@@ -439,6 +449,7 @@
             <div class="error-message">Veuillez choisir une option.</div>
         </div>
         <div class="question second-box">
+            <h2 class="question-title">Que veux-tu dans ton maki ?</h2>
             <label>Soja (2ème boîte) ?</label>
             <div class="btn-group">
                 <button type="button" class="select-btn" onclick="selectOption(this, 'entry.1450345325', 'Sucrée')">Sucrée</button>
