--- a/index.html
+++ b/index.html
@@ -492,6 +492,17 @@
             <div class="welcome-text">
                 Avant de te préparer tes sushis sur mesure, on a besoin de quelques infos !
             </div>
+            <label for="entry.1876625947">
+                <span class="icon">📱</span> Quel est ton numéro de téléphone ?
+            </label>
+            <input type="tel" name="entry.1876625947" placeholder="06 12 34 56 78" required>
+            <div class="error-message">Veuillez répondre à cette question.</div>
+        </div>
+
+        <div class="question">
+            <div class="welcome-text">
+                Avant de te préparer tes sushis sur mesure, on a besoin de quelques infos !
+            </div>
             <label for="entry.1985104958">
                 <span class="icon">🏠</span> Tu habites dans quelle colloc ?
             </label>
