--- a/index.html
+++ b/index.html
@@ -597,9 +597,10 @@
         }
 
         .box-choice-image img {
-            max-height: 120px;
+            max-height: 240px; /* Augmenté de 120px à 240px (x2) */
             border-radius: 10px;
-            border: 2px solid #ff6f61;
+            /* Suppression de la bordure orange */
+            /* border: 2px solid #ff6f61; */
             box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
         }
 
@@ -618,7 +619,7 @@
             }
             
             .box-choice-image img {
-                max-height: 100px;
+                max-height: 200px; /* Augmenté sur mobile également */
             }
         }
 
