--- a/index.html
+++ b/index.html
@@ -756,6 +756,10 @@
                 max-width: 110px !important; /* Encore plus petit sur mobile */
             }
         }
+        .second-box .supplement-info {
+    position: relative;
+    z-index: 20;
+}
     </style>
 </head>
 <body>
