--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         .question-title {
             font-size: 8vmin;
             text-align: center;
-            margin: 0;
+            margin: 0 0 25px 0;
             color: #fff;
             font-family: 'Fjalla One', sans-serif;
             font-weight: bold;
@@ -434,7 +434,7 @@
             justify-content: center;
             gap: 10px;
             margin-bottom: 5%;
-            margin-top: -20px;
+            margin-top: 30px; /* Augmenté de -20px à 30px */
         }
 
         .ingredient-image {
@@ -757,10 +757,31 @@
             }
         }
         .ingredient-question .supplement-info {
-    position: relative;
-    z-index: 20; /* Plus élevé que le z-index de question-title (10) */
-    margin-top: 5px; /* Un petit espace après le titre */
-}
+            position: relative;
+            z-index: 20; /* Plus élevé que le z-index de question-title (10) */
+            margin-top: 15px; /* Augmenté de 5px à 15px pour plus d'espace */
+            clear: both; /* Pour s'assurer qu'il n'y a pas de flottement avec d'autres éléments */
+            display: block; /* Pour garantir qu'il s'affiche correctement */
+        }
+        @media (max-width: 600px) {
+            .supplement-info {
+                margin-top: 20px; /* Encore plus d'espace sur mobile */
+                margin-bottom: 15px; /* Espace supplémentaire en dessous */
+                font-weight: bold; /* Rendre plus visible */
+            }
+            
+            .ingredient-container {
+                margin-top: 35px; /* Plus d'espace sur mobile */
+            }
+            
+            .question-title {
+                font-size: 6vmin; /* Légèrement plus petit sur mobile */
+                padding: 8px 15px;
+                top: 15px; 
+            }
+        }
+
+
     </style>
 </head>
 <body>
